--- a/paper/references.bib
+++ b/paper/references.bib
@@ -65,16 +65,6 @@
 @article{anesthetic, doi = {10.21105/joss.01414}, url = {https://doi.org/10.21105/joss.01414}, year = {2019}, publisher = {The Open Journal}, volume = {4}, number = {37}, pages = {1414}, author = {Will Handley}, title = {anesthetic: nested sampling visualisation}, journal = {Journal of Open Source Software} }
 
 
-@misc{split,
-      title={Split personalities in Bayesian Neural Networks: the case for full marginalisation}, 
-      author={David Yallup and Will Handley and Mike Hobson and Anthony Lasenby and Pablo Lemos},
-      year={2022},
-      eprint={2205.11151},
-      archivePrefix={arXiv},
-      primaryClass={stat.ML}
-}
-
-
 @article{physical_scientists,
 	doi = {10.1038/s43586-022-00121-x},
 	url = {https://doi.org/10.1038%2Fs43586-022-00121-x},
@@ -115,4 +105,15 @@
 	author = {Will Handley and Pablo Lemos},
 	title = {Quantifying dimensionality: Bayesian cosmological model complexities},
 	journal = {Physical Review D}
+}
+
+@article{sparse_reconstruction,
+	doi = {10.1093/mnras/sty3307},
+	url = {https://doi.org/10.1093%2Fmnras%2Fsty3307},
+	year = 2018,
+	month = {dec},
+	publisher = {Oxford University Press ({OUP})},
+	author = {Edward Higson and Will Handley and Michael Hobson and Anthony Lasenby},
+	title = {Bayesian sparse reconstruction: a brute-force approach to astronomical imaging and machine learning},
+	journal = {Monthly Notices of the Royal Astronomical Society}
 }
