--- a/notebooks/summer_4/plot_predict.ipynb
+++ b/notebooks/summer_4/plot_predict.ipynb
@@ -152,7 +152,7 @@
     "fig.delaxes(axs[-1])\n",
     "for i, chain in enumerate(lcdm_chains):\n",
     "    name, samples = get_samples('lcdm', chain)\n",
-    "    iterations, logXfs, logXfs_std, true_endpoint = read_from_txt(f\"lcdm/nos/{chain}_bt_25_nos.txt\")\n",
+    "    iterations, logXfs, logXfs_std, true_end/point = read_from_txt(f\"lcdm/nos/{chain}_bt_25_nos.txt\")\n",
     "    logXs = samples.logX().iloc[iterations]\n",
     "    endpoints, endpoints_std = calc_endpoints(iterations, logXs, logXfs, logXfs_std, nlive=1000)\n",
     "    plot_std(iterations, endpoints, endpoints_std, true_endpoint, ylim=1.3, ax=axs[i])\n",
