--- a/paper/references.bib
+++ b/paper/references.bib
@@ -117,3 +117,87 @@
 	title = {Bayesian sparse reconstruction: a brute-force approach to astronomical imaging and machine learning},
 	journal = {Monthly Notices of the Royal Astronomical Society}
 }
+
+@misc{statmech,
+      title={Efficient sampling of atomic configurational spaces}, 
+      author={Livia B. Pártay and Albert P. Bartók and Gábor Csányi},
+      year={2010},
+      eprint={0906.3544},
+      archivePrefix={arXiv},
+      primaryClass={cond-mat.stat-mech}
+}
+
+@article{Akrami_2010,
+	doi = {10.1007/jhep04(2010)057},
+	url = {https://doi.org/10.1007%2Fjhep04%282010%29057},
+	year = 2010,
+	month = {apr},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2010},
+	number = {4},
+	author = {Yashar Akrami and Pat Scott and Joakim Edsjö and Jan Conrad and Lars Bergström},
+	title = {A profile likelihood analysis of the constrained {MSSM} with genetic algorithms},
+	journal = {Journal of High Energy Physics}
+}
+
+@article{Feroz_2011,
+	doi = {10.1007/jhep06(2011)042},
+	url = {https://doi.org/10.1007%2Fjhep06%282011%29042},
+	year = 2011,
+	month = {jun},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {2011},
+	number = {6},
+	author = {Farhan Feroz and Kyle Cranmer and Mike Hobson and Roberto Ruiz de Austri and Roberto Trotta},
+	title = {Challenges of profile likelihood evaluation in multi-dimensional {SUSY} scans},
+	journal = {Journal of High Energy Physics}
+}
+
+@article{supernest,
+AUTHOR = {Petrosyan, Aleksandr and Handley, Will},
+TITLE = {SuperNest: Accelerated Nested Sampling Applied to Astrophysics and Cosmology},
+JOURNAL = {Physical Sciences Forum},
+VOLUME = {5},
+YEAR = {2022},
+NUMBER = {1},
+ARTICLE-NUMBER = {51},
+URL = {https://www.mdpi.com/2673-9984/5/1/51},
+ISSN = {2673-9984},
+DOI = {10.3390/psf2022005051}
+}
+
+@article{curvature_tension,
+	doi = {10.1103/physrevd.103.l041301},
+	url = {https://doi.org/10.1103%2Fphysrevd.103.l041301},
+	year = 2021,
+	month = {feb},
+	publisher = {American Physical Society ({APS})},
+	volume = {103},
+	number = {4},
+	author = {Will Handley},
+	title = {Curvature tension: Evidence for a closed universe},
+	journal = {Physical Review D}
+}
+
+@misc{ultranest,
+      title={UltraNest -- a robust, general purpose Bayesian inference engine}, 
+      author={Johannes Buchner},
+      year={2021},
+      eprint={2101.09604},
+      archivePrefix={arXiv},
+      primaryClass={stat.CO}
+}
+
+@article{dynesty,
+	doi = {10.1093/mnras/staa278},
+	url = {https://doi.org/10.1093%2Fmnras%2Fstaa278},
+	year = 2020,
+	month = {feb},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {493},
+	number = {3},
+	pages = {3132--3158},
+	author = {Joshua S Speagle},
+	title = {dynesty: a dynamic nested sampling package for estimating Bayesian posteriors and evidences},
+	journal = {Monthly Notices of the Royal Astronomical Society}
+}
